@startuml classes_kafkaescli.domain

class "Config" as kafkaescli.domain.models.Model.Config #aliceblue {
  extra : str
  use_enum_values : bool
}
class "Config" as kafkaescli.domain.models.Config #aliceblue {
  bootstrap_servers : str
  middleware : List[Middleware]
}
class "Config" as kafkaescli.domain.models.PayloadMetadata.Config #aliceblue {
  extra : str
}
class "Config" as kafkaescli.domain.models.Payload.Config #aliceblue {
  json_encoders : dict
}
class "ConfigFile" as kafkaescli.domain.models.ConfigFile #aliceblue {
  default_profile : Optional[str]
  profiles : List[ConfigProfile]
  version : int
}
class "ConfigProfile" as kafkaescli.domain.models.ConfigProfile #aliceblue {
  config
  name : str
}
class "ConsumerPayload" as kafkaescli.domain.models.ConsumerPayload #aliceblue {
}
class "DataModel" as kafkaescli.domain.models.DataModel #aliceblue {
  uuid : UUID, UUID4
}
class "Middleware" as kafkaescli.domain.models.Middleware #aliceblue {
  hook_after_consume : Optional[str]
  hook_before_produce : Optional[str]
}
class "MiddlewareHook" as kafkaescli.domain.models.MiddlewareHook #aliceblue {
  name
}
class "Model" as kafkaescli.domain.models.Model #aliceblue {
}
class "Payload" as kafkaescli.domain.models.Payload #aliceblue {
  key : Optional[JSONSerializable]
  metadata
  value : Union
}
class "PayloadMetadata" as kafkaescli.domain.models.PayloadMetadata #aliceblue {
  offset : int
  partition : int
  timestamp : int
  topic : str
}
class "ProducerPayload" as kafkaescli.domain.models.ProducerPayload #aliceblue {
}
kafkaescli.domain.models.Config --|> kafkaescli.domain.models.Model
kafkaescli.domain.models.ConfigFile --|> kafkaescli.domain.models.Model
kafkaescli.domain.models.ConfigProfile --|> kafkaescli.domain.models.Model
kafkaescli.domain.models.ConsumerPayload --|> kafkaescli.domain.models.Payload
kafkaescli.domain.models.DataModel --|> kafkaescli.domain.models.Model
kafkaescli.domain.models.Middleware --|> kafkaescli.domain.models.Model
kafkaescli.domain.models.Payload --|> kafkaescli.domain.models.DataModel
kafkaescli.domain.models.PayloadMetadata --|> kafkaescli.domain.models.Model
kafkaescli.domain.models.ProducerPayload --|> kafkaescli.domain.models.Payload
kafkaescli.domain.models.Config --* kafkaescli.domain.models.ConfigProfile : config
kafkaescli.domain.models.PayloadMetadata --* kafkaescli.domain.models.Payload : metadata
@enduml
